--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@ document.addEventListener('DOMContentLoaded', () => {
                 "Spatial Aptitude: Transformation of shapes, pattern recognition"
             ],
             resources: [
-                { type: "Video Lectures", primary: "Saurabh Thakur (YouTube Playlists)", url: "https://www.youtube.com/playlist?list=PLpyc33gOcbVA4qXMoQFRGYo2-B_R_N-OR" },
+                { type: "Video Lectures", primary: "Saurabh Thakur (YouTube Playlists)", url: "https://www.youtube.com/watch?v=LFkoLCtCRcY&list=PLA9RS_96_LD4UrLigHfxSFrmOKfpL2E84" },
                 { type: "Conceptual Notes", primary: "GeeksforGeeks - GA Notes for GATE CSE", url: "https://www.geeksforgeeks.org/general-aptitude-for-gate/" },
                 { type: "Problem Solving", primary: "GateOverflow - Previous Year GA Questions", url: "https://gateoverflow.in/questions/general-aptitude" }
             ]
